--- a/assets/indeex.html
+++ b/assets/indeex.html
@@ -33,3 +33,29 @@
 
     <title>Emergency Service Hotline</title>
 </head>
+<body class="hind-madurai max-w-[1920px]">
+
+    <!-- header -->
+    <header class="header bg-white w-full hind-madurai">
+        <nav class="nav-bar flex justify-between items-center mt-[20px] ml-[60px] mb-[20px] mr-[60px]">
+            <!-- left corner -->
+            <div class="flex justify-center items-center gap-[10px] w-[195px] max-h-[50px]">
+                <img src="logo.png" class="w-[60px] h-[60px]" alt="">
+                <h1 class="text-[#006747] hind-madurai-bold text-[22px]">Emergency Service</h1>
+            </div>
+            <!-- right corner -->
+            <div class="flex justify-center items-center gap-[15px] w-[400px] h-[52px]">
+                <div class="bg-[#41ff6b1a] gap-2 p-[10px] rounded-full w-[123px] flex justify-center items-center">
+                    <span id="heart-count">0</span>
+                    <img src="heart.png" alt="heart-icon" class="w-[30px] h-[30px]">
+                </div>
+                <div class="bg-[#41ff6b1a] gap-2 p-[10px] rounded-full w-[106px] flex justify-center items-center">
+                    <span id="balance">100</span>
+                    <img src="coin.png" alt="coin-icon" class="w-[30px] h-[30px]">
+                </div>
+                <div class="bg-[#00A63E] gap-2 rounded-full flex w-[130px] h-[52px] justify-center items-center">
+                    <span id="copy-count">0</span>copy
+                </div>
+            </div>
+        </nav>
+    </header>
