--- a/assets/indeex.html
+++ b/assets/indeex.html
@@ -59,3 +59,53 @@
             </div>
         </nav>
     </header>
+
+    <!-- first section -->
+    <section class="text-center hind-madurai bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] p-[20px]">
+        <img src="logo.png" alt="logo" class="mx-auto w-[92px] h-[92px]">
+        <h2 class="my-[11px] text-[40px] hind-madurai-bold text-white">Emergency Service Directory</h2>
+        <p class="text-[20px] hind-madurai-semibold text-white">Government Emergency Services at Your Fingertip - A Project by  Government of the People's Republic of Bangladesh</p>
+    </section>
+
+    <!-- second section -->
+    <section class="bg-[#f5fff6]">
+        <div class=" grid grid-cols-4 grid-rows-3 gap-[30px] p-10">
+            <!-- 1st -->
+            <div class="national-emergency-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
+                <div class="flex items-center justify-between mb-[16px]">
+                    <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
+                        <img src="emergency.png" class="w-[32px] h-[32px]" alt="emergency-light">
+                    </div>
+                    <button id="heart-icon-national"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                </div>
+                <div class="national-emergency-number-details">
+                    <h1 class="hind-madurai-bold text-[24px]">National Emergency Number</h1>
+                    <p id="emergency-title" class="roboto text-[#5C5C5C] text-[18px]">National Emergency Service</p>
+                    <h3 id="emergency-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">999</h3>
+                    <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">All</button>
+                    <div class="roboto">
+                        <button id="national-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="national-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 2nd -->
+            <div class="police-emergency-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
+                <div class="flex items-center justify-between mb-[16px]">
+                    <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
+                        <img src="police.png" class="w-[32px] h-[32px]" alt="emergency-light">
+                    </div>
+                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                </div>
+                <div class="national-emergency-number-details">
+                    <h1 class="hind-madurai-bold text-[24px]">Police Helpline Number</h1>
+                    <p class="roboto text-[#5C5C5C] text-[18px]">Police</p>
+                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">999</h3>
+                    <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Police</button>
+                    <div class="roboto">
+                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                    </div>
+                </div>
+            </div>
