--- a/assets/indeex.html
+++ b/assets/indeex.html
@@ -109,3 +109,30 @@
                     </div>
                 </div>
             </div>
+<!-- 3rd -->
+            <div class="fire-service-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
+                <div class="flex items-center justify-between mb-[16px]">
+                    <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
+                        <img src="fire-service.png" class="w-[32px] h-[32px]" alt="emergency-light">
+                    </div>
+                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                </div>
+                <div class="national-emergency-number-details">
+                    <h1 class="hind-madurai-bold text-[24px]">Fire Service Number</h1>
+                    <p class="roboto text-[#5C5C5C] text-[18px]">Fire Service</p>
+                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">999</h3>
+                    <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Fire</button>
+                    <div class="roboto">
+                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 4th special -->
+            <div id="call-history" class="call history row-span-3 w-[400px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[20px]">
+                <div class="flex items-center justify-between mb-[16px]">
+                    <h3 class="roboto font-medium text-[20px]"><i class="fa-solid fa-clock-rotate-left mr-[8px] text-[#5C5C5C]"></i>Call History</h3>
+                    <button class="bg-[#00A63E] text-white rounded-full w-[114px] h-[52px]">Clear</button>
+                </div>
+            </div>
