--- a/assets/indeex.html
+++ b/assets/indeex.html
@@ -136,3 +136,42 @@
                     <button class="bg-[#00A63E] text-white rounded-full w-[114px] h-[52px]">Clear</button>
                 </div>
             </div>
+      <!-- 4th -->
+            <div class="ambulance-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
+                <div class="flex items-center justify-between mb-[16px]">
+                    <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
+                        <img src="ambulance.png" class="w-[32px] h-[32px]" alt="emergency-light">
+                    </div>
+                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                </div>
+                <div class="national-emergency-number-details">
+                    <h1 class="hind-madurai-bold text-[24px]">Ambulance Service</h1>
+                    <p class="roboto text-[#5C5C5C] text-[18px]">Ambulance</p>
+                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">1994-999999</h3>
+                    <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Health</button>
+                    <div class="roboto">
+                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- 5th -->
+            <div class="women&child-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
+                <div class="flex items-center justify-between mb-[16px]">
+                    <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
+                        <img src="emergency.png" class="w-[32px] h-[32px]" alt="emergency-light">
+                    </div>
+                    <button><i class="fa-regular fa-heart text-[#5C5C5C] "></i></button>
+                </div>
+                <div class="national-emergency-number-details">
+                    <h1 class="hind-madurai-bold text-[24px]">Women & Child Helpline</h1>
+                    <p class="roboto text-[#5C5C5C] text-[18px]">Women & Child Helpline</p>
+                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">109</h3>
+                    <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Help</button>
+                    <div class="roboto">
+                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                    </div>
+                </div>
+            </div>
