--- a/assets/indeex.html
+++ b/assets/indeex.html
@@ -234,3 +234,30 @@
                     </div>
                 </div>
             </div>
+
+            <!-- 9th -->
+            <div class="bd-railway-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
+                <div class="flex items-center justify-between mb-[16px]">
+                    <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
+                        <img src="Bangladesh-Railway.png" class="w-[32px] h-[32px]" alt="emergency-light">
+                    </div>
+                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                </div>
+                <div class="national-emergency-number-details">
+                    <h1 class="hind-madurai-bold text-[24px]">Bangladesh Railway Helpline </h1>
+                    <p class="roboto text-[#5C5C5C] text-[18px]">Bangladesh Railway</p>
+                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">163</h3>
+                    <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Travel</button>
+                    <div class="roboto">
+                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <script src="script.js"></script>
+</body>
+</html>
