--- a/assets/indeex.html
+++ b/assets/indeex.html
@@ -79,8 +79,8 @@
                     <button id="heart-icon-national"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
                 </div>
                 <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">National Emergency Number</h1>
-                    <p id="emergency-title" class="roboto text-[#5C5C5C] text-[18px]">National Emergency Service</p>
+                    <h1 id="emergency-title" class="hind-madurai-bold text-[24px]">National Emergency Number</h1>
+                    <p class="roboto text-[#5C5C5C] text-[18px]">National Emergency Service</p>
                     <h3 id="emergency-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">999</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">All</button>
                     <div class="roboto">
@@ -91,40 +91,41 @@
             </div>
 
             <!-- 2nd -->
-            <div class="police-emergency-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
+            <div class="police-helpline-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
                 <div class="flex items-center justify-between mb-[16px]">
                     <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
                         <img src="police.png" class="w-[32px] h-[32px]" alt="emergency-light">
                     </div>
-                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                    <button id="heart-icon-police"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
                 </div>
-                <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">Police Helpline Number</h1>
+                <div class="police-helpline-details">
+                    <h1 id="police-title" class="hind-madurai-bold text-[24px]">Police Helpline Number</h1>
                     <p class="roboto text-[#5C5C5C] text-[18px]">Police</p>
-                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">999</h3>
+                    <h3 id="police-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">999</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Police</button>
                     <div class="roboto">
-                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
-                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                        <button id="police-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="police-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
                     </div>
                 </div>
             </div>
-<!-- 3rd -->
+
+            <!-- 3rd -->
             <div class="fire-service-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
                 <div class="flex items-center justify-between mb-[16px]">
                     <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
                         <img src="fire-service.png" class="w-[32px] h-[32px]" alt="emergency-light">
                     </div>
-                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                    <button id="heart-icon-fire"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
                 </div>
                 <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">Fire Service Number</h1>
+                    <h1 id="fire-title" class="hind-madurai-bold text-[24px]">Fire Service Number</h1>
                     <p class="roboto text-[#5C5C5C] text-[18px]">Fire Service</p>
-                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">999</h3>
+                    <h3 id="fire-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">999</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Fire</button>
                     <div class="roboto">
-                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
-                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                        <button id="fire-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="fire-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
                     </div>
                 </div>
             </div>
@@ -135,23 +136,25 @@
                     <h3 class="roboto font-medium text-[20px]"><i class="fa-solid fa-clock-rotate-left mr-[8px] text-[#5C5C5C]"></i>Call History</h3>
                     <button class="bg-[#00A63E] text-white rounded-full w-[114px] h-[52px]">Clear</button>
                 </div>
+
             </div>
-      <!-- 4th -->
+
+            <!-- 4th -->
             <div class="ambulance-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
                 <div class="flex items-center justify-between mb-[16px]">
                     <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
                         <img src="ambulance.png" class="w-[32px] h-[32px]" alt="emergency-light">
                     </div>
-                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                    <button id="heart-icon-ambulance"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
                 </div>
                 <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">Ambulance Service</h1>
+                    <h1 id="ambulance-title" class="hind-madurai-bold text-[24px]">Ambulance Service</h1>
                     <p class="roboto text-[#5C5C5C] text-[18px]">Ambulance</p>
-                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">1994-999999</h3>
+                    <h3 id="ambulance-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">1994-999999</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Health</button>
                     <div class="roboto">
-                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
-                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                        <button id="ambulance-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="ambulance-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
                     </div>
                 </div>
             </div>
@@ -162,35 +165,36 @@
                     <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
                         <img src="emergency.png" class="w-[32px] h-[32px]" alt="emergency-light">
                     </div>
-                    <button><i class="fa-regular fa-heart text-[#5C5C5C] "></i></button>
+                    <button id="heart-icon-women"><i class="fa-regular fa-heart text-[#5C5C5C] "></i></button>
                 </div>
-                <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">Women & Child Helpline</h1>
+                <div class="woman&child-number-details">
+                    <h1 id="women-title" class="hind-madurai-bold text-[24px]">Women & Child Helpline</h1>
                     <p class="roboto text-[#5C5C5C] text-[18px]">Women & Child Helpline</p>
-                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">109</h3>
+                    <h3 id="women-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">109</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Help</button>
                     <div class="roboto">
-                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
-                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                        <button id="women-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="women-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
                     </div>
                 </div>
             </div>
-<!-- 6th -->
+
+            <!-- 6th -->
             <div class="anti-corruption-number w-[437px] h-[360px] rounded-lg bg-white shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)] p-[32px]">
                 <div class="flex items-center justify-between mb-[16px]">
                     <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
                         <img src="emergency.png" class="w-[32px] h-[32px]" alt="emergency-light">
                     </div>
-                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                    <button id="heart-icon-anti"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
                 </div>
                 <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">Anti-Corruption Helpline</h1>
+                    <h1 id="anti-title" class="hind-madurai-bold text-[24px]">Anti-Corruption Helpline</h1>
                     <p class="roboto text-[#5C5C5C] text-[18px]">Anti-Corruption</p>
-                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">106</h3>
+                    <h3 id="anti-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">106</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Govt.</button>
                     <div class="roboto">
-                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
-                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                        <button id="anti-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="anti-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
                     </div>
                 </div>
             </div>
@@ -201,16 +205,16 @@
                     <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
                         <img src="emergency.png" class="w-[32px] h-[32px]" alt="emergency-light">
                     </div>
-                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                    <button id="heart-icon-electricity"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
                 </div>
                 <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">Electricity Helpline</h1>
+                    <h1 id="electricity-title" class="hind-madurai-bold text-[24px]">Electricity Helpline</h1>
                     <p class="roboto text-[#5C5C5C] text-[18px]">Electricity Outage</p>
-                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">16216</h3>
+                    <h3 id="electricity-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">16216</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Electricity</button>
                     <div class="roboto">
-                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
-                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                        <button id="electricity-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="electricity-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
                     </div>
                 </div>
             </div>
@@ -221,16 +225,16 @@
                     <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
                         <img src="brac.png" class="w-[32px] h-[32px]" alt="emergency-light">
                     </div>
-                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                    <button id="heart-icon-brac"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
                 </div>
                 <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">Brac Helpline</h1>
+                    <h1 id="brac-title" class="hind-madurai-bold text-[24px]">Brac Helpline</h1>
                     <p class="roboto text-[#5C5C5C] text-[18px]">Brac</p>
-                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">16445</h3>
+                    <h3 id="brac-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">16445</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">NGO</button>
                     <div class="roboto">
-                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
-                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                        <button id="brac-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="brac-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
                     </div>
                 </div>
             </div>
@@ -241,16 +245,16 @@
                     <div class="w-[60px] h-[60px] bg-[#FFE3E2] rounded-2xl flex items-center justify-center">
                         <img src="Bangladesh-Railway.png" class="w-[32px] h-[32px]" alt="emergency-light">
                     </div>
-                    <button><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
+                    <button id="heart-icon-railway"><i class="fa-regular fa-heart text-[#5C5C5C]"></i></button>
                 </div>
                 <div class="national-emergency-number-details">
-                    <h1 class="hind-madurai-bold text-[24px]">Bangladesh Railway Helpline </h1>
+                    <h1 id="railway-title" class="hind-madurai-bold text-[24px]">Bangladesh Railway Helpline </h1>
                     <p class="roboto text-[#5C5C5C] text-[18px]">Bangladesh Railway</p>
-                    <h3 class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">163</h3>
+                    <h3 id="railway-title1" class="mt-[24px] mb-[2px] text-[#111111] font-bold text-[28px]">163</h3>
                     <button class="bg-[#F2F2F2] pl-[16px] pr-[16px] py-[6px] rounded-full mb-[24px]">Travel</button>
                     <div class="roboto">
-                        <button class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
-                        <button class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
+                        <button id="railway-copy-btn" class="bg-white border border-gray-300 text-[#5C5C5C] rounded-lg w-[180px] h-[40px] mr-1"><i class="fa-regular fa-copy mr-[5px]"></i>Copy</button>
+                        <button id="railway-call-btn" class="bg-[#00A63E] text-white rounded-lg w-[180px] h-[40px]"><i class="fa-solid fa-phone mr-[5px]"></i>Call</button>
                     </div>
                 </div>
             </div>
